translation is working

--- a/config/locales/devise.fr.yml
+++ b/config/locales/devise.fr.yml
@@ -1,4 +1,6 @@
-fr:
+# Little tricks "en" not "fr" at top of this file for devise
+
+en:
   devise:
     confirmations:
       confirmed: "Votre compte a été validé."
